--- a/public/chat.html
+++ b/public/chat.html
@@ -5,9 +5,10 @@
     <title>Title</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/bootstrap.css">
-
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
+       /*
         var socket = io.connect();
         isim =  prompt("Adınız : ");
 
@@ -18,7 +19,25 @@
         socket.on("alici",function (data) {
             alert(data + " adlı kişi online...");
         });
+        */
+
+       $(document).ready(function () {
+           var socket = io.connect();
+           var kullanici =  prompt("Adınız : ");
+           $('#mesaj').keyup(function (e) {
+               var tus =e.keyCode;
+               if(tus == 13){
+                   var mytext = $('#mesaj').val();
+                   socket.emit("gonder",{'mesaj' : mytext, 'user' : kullanici});
+                   $('#mesaj').val('');
+               }
+           });
+           socket.on("alici",function (data) {
+               $('#mesajlar').append('<div class="row message-bubble"><p class="text-muted">'+ data.user +'</p><p>'+data.mesaj+'</p><p>'+data.saat+':'+data.dakika+'</p></div>');
+           });
+       });
     </script>
+
 </head>
 <body>
         <div class="container">
@@ -26,31 +45,16 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Panel heading without title</div>
                     <div class="panel-body">
-                        <div class="container">
+                        <div class="container" id="mesajlar">
                             <div class="row message-bubble">
                                 <p class="text-muted">Matt Townsen</p>
                                 <span>Why is yo shit so broke?</span>
                             </div>
-                            <div class="row message-bubble">
-                                <p class="text-muted">Matt Townsen</p>
-                                <p>It Isn't'</p>
-                            </div>
-                            <div class="row message-bubble">
-                                <p class="text-muted">Matt Townsen</p>
-                                <p>Umm yes it is</p>
-                            </div>
-                            <div class="row message-bubble">
-                                <p class="text-muted">Matt Townsen</p>
-                                <p>Test message</p>
-                            </div>
+
+
                         </div>
                         <div class="panel-footer">
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Send</button>
-                          </span>
-                            </div>
+                           <input type="text" id="mesaj"></input>
                         </div>
                     </div>
                 </div>
